[package]
name = "clickhouse-cityhash-rs"
version = "0.1.0"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"

[dependencies]

[dev-dependencies]
clickhouse-cityhash = { version="0.1.0", path="../cityhash"}
rand = "0.7.3"

[features]
default = []
simd = []

[profile.release]
opt-level = 3
overflow-checks = false

[profile.bench]
opt-level = 3
overflow-checks = false
