[package]
name = "clickhouse-driver-cthrs"
description = "rust CityHash for ClickHouse Asynchronous Driver."
version = "0.1.1"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ddulesov/clickhouse_driver"

[dependencies]

[dev-dependencies]
clickhouse-driver-cth = { version="0.1.0", path="../cityhash"}
rand = "0.7.3"

[features]
default = []
simd = []

