[package]
name = "clickhouse-driver-cth"
description = "CityHash binding for ClickHouse Asynchronous Driver."
version = "0.1.0"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.54"
