[package]
name = "clickhouse-driver-cth"
description = "CityHash binding for ClickHouse Asynchronous Driver."
version = "0.1.0"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "MIT"
repository = "https://github.com/ddulesov/clickhouse_driver"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.54"

[features]
default = []
int128 = []
