[package]
name = "clickhouse_driver"
version = "0.1.0"
license = "MIT"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]

[dependencies]
clickhouse-cityhash = { version="0.1.0", path="../cityhash", optional=true}
clickhouse-cityhash-rs = { version="0.1.0", path="../cityhash-rs", optional=true}
clickhouse-derive = { version="0.1.0", path="../derive"}
lz4a = { version="0.1.0", path="../lz4a" }
thiserror = { version="1.0" }
log = { version="0.4.8" }
url = { version="^2" }
tokio = { version = "0.2", features = ["rt-core", "sync", "tcp", "time", "dns", "stream", "test-util", "io-util","macros"] }
tokio-native-tls = { version = "0.1.0", optional= true }
pin-project-lite = { version="^0.1" }
futures = { version="0.3" }
native-tls = { version = "*", optional = true }
hostname = { version="^0.3" }
chrono = { version="^0.4" }
chrono-tz = { version="^0.5" }
crossbeam = { version="^0.7" }
uuid = { version="^0.8", features=["v4"] }
lazy_static = { version="^1.4" }
rand= { version="0.7" }
byteorder={ version="^1.3"}
bytes={ version="^0.5" }

[features]
default = ["cityhash_rs"]
tls = ["tokio-native-tls"]
cityhash_rs = ["clickhouse-cityhash-rs"]
cityhash = ["clickhouse-cityhash"]
recycle = []
int128 = []

[[example]]
name = "insert-select"
required-features = ["cityhash_rs"]

[[example]]
name = "bulk-insert"
required-features = ["cityhash_rs"]


[[test]]
name = "pool"

[[test]]
name = "query"

[[test]]
name = "insert"

