[package]
name = "clickhouse-driver"
description = "Asynchronous tokio-based Yandex ClickHouse driver."
version = "0.1.0-alpha.3"
license = "MIT"
authors = ["dmitry dulesov <dmitry.dulesov@gmail.com>"]
homepage = "https://github.com/ddulesov/clickhouse_driver"
edition = "2018"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
repository = "https://github.com/ddulesov/clickhouse_driver"

[dependencies]
clickhouse-driver-cth = { version="0.1.0", path="../cityhash", optional=true}
clickhouse-driver-cthrs = { version="0.1.1", path="../cityhash-rs", optional=true}

lz4 = "1.23.1"
thiserror = { version="1.0" }
log = { version="0.4.8" }
url = { version="^2" }
# tokio = { version = "0.2", features = ["rt-core", "sync", "tcp", "time", "dns", "stream", "test-util", "io-util","macros"] }
# tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "signal"] }
tokio = { version = "1.15.0", features = ["rt", "sync", "net",  "time", "rt-multi-thread", "test-util", "io-util","macros"] }

tokio-native-tls = { version = "0.1.0", optional= true }
pin-project-lite = { version="^0.1" }
futures = { version="0.3" }
hostname = { version="^0.3" }
chrono = { version="^0.4" }
chrono-tz = { version="^0.5" }
crossbeam = { version="^0.7" }
slab = { version="0.4.2" }
parking_lot = {version="^0.11"}
uuid = { version="^0.8", features=["v4"] }
lazy_static = { version="^1.4" }
rand= { version="0.7" }
byteorder={ version="^1.3"}
bytes={ version="^0.5" }

[features]
default = ["cityhash_rs"]
tls = ["tokio-native-tls"]
cityhash_rs = ["clickhouse-driver-cthrs"]
cityhash = ["clickhouse-driver-cth"]
recycle = []
int128 = []
extra = []

[[example]]
name = "insert-select"
required-features = ["cityhash_rs"]

[[example]]
name = "bulk-insert"
required-features = ["cityhash_rs"]

[[example]]
name = "select"
required-features = ["cityhash_rs"]

[[example]]
name = "array"
required-features = ["cityhash_rs"]

[[test]]
name = "pool"

[[test]]
name = "query"

[[test]]
name = "insert"
