[package]
name = "clickhouse-driver-lz4"
description = "LZ4 for ClickHouse Asynchronous Driver."
version = "0.1.0"
authors = ["Dmitry Dulesov <dmitry.dulesov@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "clickhouse-driver"
license = "MIT"
repository = "https://github.com/ddulesov/clickhouse_driver"
include = ["liblz4/lib/**","benches/**","src/**","build.rs"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.54"

[dev-dependencies]
rand = "0.7.3"
